--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-concurrent": "1.0.0",
     "grunt-contrib-connect": "^0.10.1",
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "connect-livereload": "^0.5.3"
   },
   "main": "Gruntfile.js",
   "scripts": {
